chore: update to JDK 22